--- a/Dockerfile_native
+++ b/Dockerfile_native
@@ -10,11 +10,13 @@ ENV RUSTUP_HOME=/usr/local/rustup \
 COPY scripts/ .
 RUN ./install_native.sh
 
+ARG DUMMY1=0
+
 RUN apt-get update && apt-get install -y git make \
     && git clone https://github.com/gianlu33/rust-sgx-apps.git \
     && cd rust-sgx-apps && make install_native
 
-ARG DUMMY=whatever
+ARG DUMMY2=0
 
 RUN git clone https://github.com/gianlu33/reactive-net.git \
     && git clone https://github.com/gianlu33/rust-sgx-gen.git \
