--- a/Dockerfile_sancus
+++ b/Dockerfile_sancus
@@ -12,11 +12,13 @@ ARG SANCUS_KEY=deadbeefcafebabec0defeeddefec8ed
 COPY scripts/ .
 RUN ./install_sancus.sh $SANCUS_SECURITY $SANCUS_KEY
 
+ARG DUMMY1=0
+
 RUN apt-get update && apt-get install -y git \
     && git clone https://github.com/gianlu33/reactive-uart2ip.git \
     && pip install reactive-uart2ip/
 
-ARG DUMMY=whatever
+ARG DUMMY2=0
 
 RUN git clone https://github.com/gianlu33/reactive-net.git \
     && git clone --branch sgx-extension https://github.com/gianlu33/reactive-tools.git \
