change cloning branch of reactive-tools

--- a/Dockerfile_sancus
+++ b/Dockerfile_sancus
@@ -12,7 +12,7 @@ ARG SANCUS_KEY=deadbeefcafebabec0defeeddefec8ed
 COPY scripts/ .
 RUN ./install_sancus.sh $SANCUS_SECURITY $SANCUS_KEY
 
-ARG DUMMY1=0
+ARG DUMMY1=1
 
 RUN apt-get update && apt-get install -y git \
     && git clone https://github.com/gianlu33/reactive-uart2ip.git \
@@ -21,7 +21,7 @@ RUN apt-get update && apt-get install -y git \
 ARG DUMMY2=0
 
 RUN git clone https://github.com/gianlu33/reactive-net.git \
-    && git clone --branch sgx-extension https://github.com/gianlu33/reactive-tools.git \
+    && git clone https://github.com/gianlu33/reactive-tools.git \
     && pip install reactive-net/ \
     && pip install reactive-tools/ \
     && rm -rf /usr/src/install
