--- a/Dockerfile_sgx
+++ b/Dockerfile_sgx
@@ -10,7 +10,7 @@ ENV RUSTUP_HOME=/usr/local/rustup \
 COPY scripts/ .
 RUN ./install_sgx.sh
 
-ARG DUMMY1=0
+ARG DUMMY1=1
 
 RUN apt-get update && apt-get install -y git make \
     && git clone https://github.com/gianlu33/rust-sgx-apps.git \
@@ -20,7 +20,7 @@ ARG DUMMY2=0
 
 RUN git clone https://github.com/gianlu33/reactive-net.git \
     && git clone https://github.com/gianlu33/rust-sgx-gen.git \
-    && git clone --branch sgx-extension https://github.com/gianlu33/reactive-tools.git \
+    && git clone https://github.com/gianlu33/reactive-tools.git \
     && pip install reactive-net/ \
     && pip install rust-sgx-gen/ \
     && pip install reactive-tools/ \
